# arxiv-issue-bot

./: .gitignore  README.md  config.yml  pyproject.toml
.github/workflows/: fetch-papers.yml  test.yml
src/: config.py  fetcher.py  filter.py  issue_manager.py  main.py
tests/: test_fetcher.py  test_filter.py  test_issue_manager.py
